--- a/src/index.css
+++ b/src/index.css
@@ -195,7 +195,7 @@ code {
 /* NAVBAR */
 .nav {
   display: flex;
-  background: #6200ee;
+  background: #0c75b9;
   padding: 10px 20px;
   align-items: center;
   justify-content: space-between;
