--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ code {
   align-self: flex-start;
 }
 
-.error-dailog {
+.error-dialog {
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
@@ -408,7 +408,9 @@ nav .nav-links ul li:hover {
 .field button:hover {
   cursor: pointer;
 }
-
+.field button:disabled {
+  cursor: not-allowed;
+}
 /* SETTINGS and USERPROFILE */
 .settings {
   display: inline-flex;
