--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ code {
   align-self: flex-start;
 }
 
-.error-dialog {
+.error-dailog {
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
