--- a/src/index.css
+++ b/src/index.css
@@ -41,12 +41,12 @@ code {
   align-self: flex-start;
 }
 
-.error-dailog {
+.error-dialog {
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
 }
-.success-dailog {
+.success-dialog {
   color: #155724;
   background-color: #d4edda;
   border-color: #c3e6cb;
@@ -195,7 +195,7 @@ code {
 /* NAVBAR */
 .nav {
   display: flex;
-  background: #0c75b9;
+  background: #6200ee;
   padding: 10px 20px;
   align-items: center;
   justify-content: space-between;
@@ -411,6 +411,7 @@ nav .nav-links ul li:hover {
 .field button:disabled {
   cursor: not-allowed;
 }
+
 /* SETTINGS and USERPROFILE */
 .settings {
   display: inline-flex;
