--- a/src/index.css
+++ b/src/index.css
@@ -41,12 +41,12 @@ code {
   align-self: flex-start;
 }
 
-.error-dialog {
+.error-dailog {
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
 }
-.success-dialog {
+.success-dailog {
   color: #155724;
   background-color: #d4edda;
   border-color: #c3e6cb;
