--- a/src/index.css
+++ b/src/index.css
@@ -41,12 +41,12 @@ code {
   align-self: flex-start;
 }
 
-.error-dailog {
+.error-dialog {
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
 }
-.success-dailog {
+.success-dialog {
   color: #155724;
   background-color: #d4edda;
   border-color: #c3e6cb;
@@ -281,7 +281,7 @@ nav .nav-links ul li:hover {
   z-index: 100;
   max-height: 452px;
   overflow: scroll;
-  display: none;
+  /* display: none; */
 }
 .search-results ul {
   list-style-type: none;
